crates/php-parser/tests/snapshots/integration__attribute_explosion.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
#[A] #[B] #[C]
function f(
    #[Attr1] #[Attr2] int $x,
    #[Attr3] string $y
): void {}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "int"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 55,
                      "end": 58
                    }
                  }
                },
                "span": {
                  "start": 55,
                  "end": 58
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [
                {
                  "name": {
                    "parts": [
                      "Attr1"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 39,
                      "end": 44
                    }
                  },
                  "args": [],
                  "span": {
                    "start": 39,
                    "end": 44
                  }
                },
                {
                  "name": {
                    "parts": [
                      "Attr2"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 48,
                      "end": 53
                    }
                  },
                  "args": [],
                  "span": {
                    "start": 48,
                    "end": 53
                  }
                }
              ],
              "span": {
                "start": 37,
                "end": 61
              }
            },
            {
              "name": "y",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "string"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 76,
                      "end": 82
                    }
                  }
                },
                "span": {
                  "start": 76,
                  "end": 82
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [
                {
                  "name": {
                    "parts": [
                      "Attr3"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 69,
                      "end": 74
                    }
                  },
                  "args": [],
                  "span": {
                    "start": 69,
                    "end": 74
                  }
                }
              ],
              "span": {
                "start": 67,
                "end": 85
              }
            }
          ],
          "body": [],
          "return_type": {
            "kind": {
              "Named": {
                "parts": [
                  "void"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 89,
                  "end": 93
                }
              }
            },
            "span": {
              "start": 89,
              "end": 93
            }
          },
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "A"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 9
                }
              },
              "args": [],
              "span": {
                "start": 8,
                "end": 9
              }
            },
            {
              "name": {
                "parts": [
                  "B"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 13,
                  "end": 14
                }
              },
              "args": [],
              "span": {
                "start": 13,
                "end": 14
              }
            },
            {
              "name": {
                "parts": [
                  "C"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 18,
                  "end": 19
                }
              },
              "args": [],
              "span": {
                "start": 18,
                "end": 19
              }
            }
          ]
        }
      },
      "span": {
        "start": 21,
        "end": 96
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 96
  }
}
