crates/php-parser/tests/snapshots/integration__attribute_on_interface_method.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php interface I { #[Pure] public function foo(): void; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Interface": {
          "name": "I",
          "extends": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "foo",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "void"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 51,
                          "end": 55
                        }
                      }
                    },
                    "span": {
                      "start": 51,
                      "end": 55
                    }
                  },
                  "body": null,
                  "attributes": [
                    {
                      "name": {
                        "parts": [
                          "Pure"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 22,
                          "end": 26
                        }
                      },
                      "args": [],
                      "span": {
                        "start": 22,
                        "end": 26
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 20,
                "end": 57
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 58
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 58
  }
}
