crates/php-parser/tests/snapshots/integration__attribute_on_param.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php function f(#[FromQuery] string $name) {}
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "f",
          "params": [
            {
              "name": "name",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "string"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 30,
                      "end": 36
                    }
                  }
                },
                "span": {
                  "start": 30,
                  "end": 36
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [
                {
                  "name": {
                    "parts": [
                      "FromQuery"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 19,
                      "end": 28
                    }
                  },
                  "args": [],
                  "span": {
                    "start": 19,
                    "end": 28
                  }
                }
              ],
              "span": {
                "start": 17,
                "end": 42
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 46
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 46
  }
}
