crates/php-parser/tests/snapshots/integration__attribute_variants.snap
---
source: crates/php-parser/tests/integration.rs
expression: "category_snapshot(\"attributes\")"
---
=== attr qualified name ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "App",
                  "Attr"
                ],
                "kind": "FullyQualified",
                "span": {
                  "start": 8,
                  "end": 17
                }
              },
              "args": [],
              "span": {
                "start": 8,
                "end": 17
              }
            }
          ]
        }
      },
      "span": {
        "start": 19,
        "end": 36
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 36
  }
}
=== attr on param ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "foo",
          "params": [
            {
              "name": "x",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "int"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 31,
                      "end": 34
                    }
                  }
                },
                "span": {
                  "start": 31,
                  "end": 34
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [
                {
                  "name": {
                    "parts": [
                      "Validate"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 21,
                      "end": 29
                    }
                  },
                  "args": [],
                  "span": {
                    "start": 21,
                    "end": 29
                  }
                }
              ],
              "span": {
                "start": 19,
                "end": 37
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 41
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 41
  }
}
=== attr complex args ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "handler",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "Route"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 13
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "String": "/api"
                    },
                    "span": {
                      "start": 14,
                      "end": 20
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 14,
                    "end": 20
                  }
                },
                {
                  "name": "methods",
                  "value": {
                    "kind": {
                      "Array": [
                        {
                          "key": null,
                          "value": {
                            "kind": {
                              "String": "GET"
                            },
                            "span": {
                              "start": 32,
                              "end": 37
                            }
                          },
                          "unpack": false,
                          "span": {
                            "start": 32,
                            "end": 37
                          }
                        },
                        {
                          "key": null,
                          "value": {
                            "kind": {
                              "String": "POST"
                            },
                            "span": {
                              "start": 39,
                              "end": 45
                            }
                          },
                          "unpack": false,
                          "span": {
                            "start": 39,
                            "end": 45
                          }
                        }
                      ]
                    },
                    "span": {
                      "start": 31,
                      "end": 46
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 22,
                    "end": 46
                  }
                }
              ],
              "span": {
                "start": 8,
                "end": 47
              }
            }
          ]
        }
      },
      "span": {
        "start": 49,
        "end": 70
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 70
  }
}
=== attr on enum case ===
{
  "stmts": [
    {
      "kind": {
        "Enum": {
          "name": "Suit",
          "scalar_type": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "Case": {
                  "name": "Hearts",
                  "value": null,
                  "attributes": [
                    {
                      "name": {
                        "parts": [
                          "Description"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 20,
                          "end": 31
                        }
                      },
                      "args": [
                        {
                          "name": null,
                          "value": {
                            "kind": {
                              "String": "Hearts"
                            },
                            "span": {
                              "start": 32,
                              "end": 40
                            }
                          },
                          "unpack": false,
                          "by_ref": false,
                          "span": {
                            "start": 32,
                            "end": 40
                          }
                        }
                      ],
                      "span": {
                        "start": 20,
                        "end": 41
                      }
                    }
                  ]
                }
              },
              "span": {
                "start": 43,
                "end": 56
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 57
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 57
  }
}
=== stacked attrs ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "A"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 9
                }
              },
              "args": [],
              "span": {
                "start": 8,
                "end": 9
              }
            },
            {
              "name": {
                "parts": [
                  "B"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 13,
                  "end": 14
                }
              },
              "args": [],
              "span": {
                "start": 13,
                "end": 14
              }
            },
            {
              "name": {
                "parts": [
                  "C"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 18,
                  "end": 19
                }
              },
              "args": [],
              "span": {
                "start": 18,
                "end": 19
              }
            }
          ]
        }
      },
      "span": {
        "start": 21,
        "end": 33
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 33
  }
}
=== grouped attrs ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "A"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 9
                }
              },
              "args": [],
              "span": {
                "start": 8,
                "end": 9
              }
            },
            {
              "name": {
                "parts": [
                  "B"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 11,
                  "end": 12
                }
              },
              "args": [],
              "span": {
                "start": 11,
                "end": 12
              }
            },
            {
              "name": {
                "parts": [
                  "C"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 14,
                  "end": 15
                }
              },
              "args": [],
              "span": {
                "start": 14,
                "end": 15
              }
            }
          ]
        }
      },
      "span": {
        "start": 17,
        "end": 29
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 29
  }
}
=== named arg in attr ===
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "handler",
          "params": [],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": [
            {
              "name": {
                "parts": [
                  "Route"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 13
                }
              },
              "args": [
                {
                  "name": "path",
                  "value": {
                    "kind": {
                      "String": "/api"
                    },
                    "span": {
                      "start": 20,
                      "end": 26
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 14,
                    "end": 26
                  }
                },
                {
                  "name": "methods",
                  "value": {
                    "kind": {
                      "Array": [
                        {
                          "key": null,
                          "value": {
                            "kind": {
                              "String": "GET"
                            },
                            "span": {
                              "start": 38,
                              "end": 43
                            }
                          },
                          "unpack": false,
                          "span": {
                            "start": 38,
                            "end": 43
                          }
                        }
                      ]
                    },
                    "span": {
                      "start": 37,
                      "end": 44
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 28,
                    "end": 44
                  }
                }
              ],
              "span": {
                "start": 8,
                "end": 45
              }
            }
          ]
        }
      },
      "span": {
        "start": 47,
        "end": 68
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 68
  }
}
=== multiple named args in attr ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "Assert",
                  "Range"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 8,
                  "end": 20
                }
              },
              "args": [
                {
                  "name": "min",
                  "value": {
                    "kind": {
                      "Int": 1
                    },
                    "span": {
                      "start": 26,
                      "end": 27
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 21,
                    "end": 27
                  }
                },
                {
                  "name": "max",
                  "value": {
                    "kind": {
                      "Int": 100
                    },
                    "span": {
                      "start": 34,
                      "end": 37
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 29,
                    "end": 37
                  }
                }
              ],
              "span": {
                "start": 8,
                "end": 38
              }
            }
          ]
        }
      },
      "span": {
        "start": 40,
        "end": 52
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 52
  }
}
=== positional and named args in attr ===
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [],
          "attributes": [
            {
              "name": {
                "parts": [
                  "Attr"
                ],
                "kind": "Unqualified",
                "span": {
                  "start": 8,
                  "end": 12
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "String": "positional"
                    },
                    "span": {
                      "start": 13,
                      "end": 25
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 13,
                    "end": 25
                  }
                },
                {
                  "name": "key",
                  "value": {
                    "kind": {
                      "String": "value"
                    },
                    "span": {
                      "start": 32,
                      "end": 39
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 27,
                    "end": 39
                  }
                },
                {
                  "name": "flag",
                  "value": {
                    "kind": {
                      "Bool": true
                    },
                    "span": {
                      "start": 47,
                      "end": 51
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 41,
                    "end": 51
                  }
                }
              ],
              "span": {
                "start": 8,
                "end": 52
              }
            }
          ]
        }
      },
      "span": {
        "start": 54,
        "end": 66
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 66
  }
}
